--- a/BookStoreManagement/MainWindow.xaml
+++ b/BookStoreManagement/MainWindow.xaml
@@ -1,14 +1,19 @@
-﻿<controls:MetroWindow x:Class="BookStoreManagement.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BookStoreManagement"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:viewModels="clr-namespace:BookStoreManagement.ViewModels"
-        xmlns:navigation="clr-namespace:BookStoreManagement.Navigation"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1000">
+﻿<controls:MetroWindow
+    x:Class="BookStoreManagement.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:local="clr-namespace:BookStoreManagement"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:navigation="clr-namespace:BookStoreManagement.Navigation"
+    xmlns:viewModels="clr-namespace:BookStoreManagement.ViewModels"
+    xmlns:views="clr-namespace:BookStoreManagement.Views"
+    Title="Quản lí bán sách"
+    Width="1000"
+    Height="700"
+    mc:Ignorable="d">
 
     <controls:MetroWindow.DataContext>
         <viewModels:ShellViewModel />
@@ -16,32 +21,103 @@
 
     <controls:MetroWindow.LeftWindowCommands>
         <controls:WindowCommands ShowSeparators="False">
-            <Button x:Name="GoBackButton"
-                 Width="{Binding ElementName=HamburgerMenuControl, Path=CompactPaneLength}"
-                 AutomationProperties.Name="Go back"
-                 Click="GoBack_OnClick">
-                <controls:FontIcon AutomationProperties.Name="Go back icon"
-                                FontSize="14"
-                                Glyph="&#xE72B;" />
+            <Button
+                x:Name="GoBackButton"
+                Width="{Binding ElementName=HamburgerMenuControl, Path=CompactPaneLength}"
+                AutomationProperties.Name="Go back"
+                Click="GoBack_OnClick">
+                <controls:FontIcon
+                    AutomationProperties.Name="Go back icon"
+                    FontSize="14"
+                    Glyph="&#xE72B;" />
             </Button>
         </controls:WindowCommands>
     </controls:MetroWindow.LeftWindowCommands>
+
+    <controls:MetroWindow.RightWindowCommands>
+        <controls:WindowCommands ShowSeparators="False">
+            <!--  Existing Account Button  -->
+            <Button
+                x:Name="AccountButton"
+                Padding="10,5"
+                HorizontalAlignment="Right"
+                Click="AccountButton_OnClick">
+                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                    <iconPacks:PackIconFeatherIcons
+                        Width="16"
+                        Height="16"
+                        Margin="0,0,5,0"
+                        Kind="UserPlus" />
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        FontSize="14"
+                        Foreground="White"
+                        Text="Thêm tài khoản" />
+                </StackPanel>
+            </Button>
+
+            <!--  New Logout Button  -->
+            <Button
+                x:Name="LogoutButton"
+                Margin="10,0,0,0"
+                Padding="10,5"
+                HorizontalAlignment="Right"
+                Click="LogoutButton_OnClick">
+                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                    <iconPacks:PackIconFeatherIcons
+                        Width="16"
+                        Height="16"
+                        Margin="0,0,5,0"
+                        Kind="LogOut" />
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        FontSize="14"
+                        Foreground="White"
+                        Text="Đăng xuất" />
+                </StackPanel>
+            </Button>
+
+            <!--  New Information Button  -->
+            <Button
+                x:Name="InfoButton"
+                Margin="10,0,0,0"
+                Padding="10,5"
+                HorizontalAlignment="Right"
+                Click="InfoButton_OnClick">
+                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                    <iconPacks:PackIconFeatherIcons
+                        Width="16"
+                        Height="16"
+                        Margin="0,0,5,0"
+                        Kind="Info" />
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        FontSize="14"
+                        Foreground="White"
+                        Text="Thông tin" />
+                </StackPanel>
+            </Button>
+        </controls:WindowCommands>
+    </controls:MetroWindow.RightWindowCommands>
+
+
 
     <controls:MetroWindow.Resources>
 
         <DataTemplate x:Key="MenuItemTemplate" DataType="{x:Type viewModels:MenuItem}">
             <Grid Height="48">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition
-                 Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:HamburgerMenu}}, Path=CompactPaneLength, Mode=OneWay}" />
+                    <ColumnDefinition Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:HamburgerMenu}}, Path=CompactPaneLength, Mode=OneWay}" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <ContentControl Grid.Column="0"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"
-                         Content="{Binding Icon}"
-                         Focusable="False" />
-                <TextBlock Grid.Column="1"
+                <ContentControl
+                    Grid.Column="0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Content="{Binding Icon}"
+                    Focusable="False" />
+                <TextBlock
+                    Grid.Column="1"
                     VerticalAlignment="Center"
                     FontSize="16"
                     Text="{Binding Label}" />
@@ -49,43 +125,36 @@
         </DataTemplate>
 
         <Storyboard x:Key="NavigationStoryboard">
-            <DoubleAnimationUsingKeyFrames BeginTime="00:00:00"
-                                    Storyboard.TargetProperty="(UIElement.Opacity)">
-                <SplineDoubleKeyFrame KeyTime="00:00:00"
-                               Value="0" />
-                <SplineDoubleKeyFrame KeyTime="00:00:00.150"
-                               Value="1" />
+            <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetProperty="(UIElement.Opacity)">
+                <SplineDoubleKeyFrame KeyTime="00:00:00" Value="0" />
+                <SplineDoubleKeyFrame KeyTime="00:00:00.150" Value="1" />
             </DoubleAnimationUsingKeyFrames>
-            <DoubleAnimationUsingKeyFrames BeginTime="00:00:00"
-                                    Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)">
-                <SplineDoubleKeyFrame KeyTime="00:00:00"
-                               Value="200" />
-                <SplineDoubleKeyFrame KeySpline="0.1, 0.9, 0.2, 1"
-                               KeyTime="00:00:00.300"
-                               Value="0" />
+            <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)">
+                <SplineDoubleKeyFrame KeyTime="00:00:00" Value="200" />
+                <SplineDoubleKeyFrame
+                    KeySpline="0.1, 0.9, 0.2, 1"
+                    KeyTime="00:00:00.300"
+                    Value="0" />
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
 
-        <Style BasedOn="{StaticResource {x:Type Frame}}"
-        TargetType="{x:Type Frame}">
-            <Setter Property="navigation:FrameAnimator.FrameNavigationStoryboard"
-             Value="{StaticResource NavigationStoryboard}" />
+        <Style BasedOn="{StaticResource {x:Type Frame}}" TargetType="{x:Type Frame}">
+            <Setter Property="navigation:FrameAnimator.FrameNavigationStoryboard" Value="{StaticResource NavigationStoryboard}" />
             <Setter Property="RenderTransform">
                 <Setter.Value>
                     <TranslateTransform />
                 </Setter.Value>
             </Setter>
-            <Setter Property="Background"
-             Value="{DynamicResource MahApps.Brushes.Accent4}" />
-            <Setter Property="ClipToBounds"
-             Value="True" />
+            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Accent4}" />
+            <Setter Property="ClipToBounds" Value="True" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Frame}">
-                        <Border Background="{TemplateBinding Background}"
-                         BorderBrush="{TemplateBinding BorderBrush}"
-                         BorderThickness="{TemplateBinding BorderThickness}"
-                         Padding="{TemplateBinding Padding}">
+                        <Border
+                            Padding="{TemplateBinding Padding}"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
                             <ContentPresenter x:Name="PART_FrameCP">
                                 <ContentPresenter.RenderTransform>
                                     <TranslateTransform />
@@ -98,14 +167,21 @@
         </Style>
 
     </controls:MetroWindow.Resources>
-    <controls:HamburgerMenu x:Name="HamburgerMenuControl"
-                     DisplayMode="CompactInline"
-                     IsPaneOpen="False"
-                     ItemInvoked="HamburgerMenuControl_OnItemInvoked"
-                     ItemTemplate="{StaticResource MenuItemTemplate}"
-                     ItemsSource="{Binding Menu}"
-                     OptionsItemTemplate="{StaticResource MenuItemTemplate}"
-                     OptionsItemsSource="{Binding OptionsMenu}" />
+    <Grid>
+        <!--  Nội dung chính: HamburgerMenu  -->
+        <controls:HamburgerMenu
+            x:Name="HamburgerMenuControl"
+            DisplayMode="CompactInline"
+            IsPaneOpen="False"
+            ItemInvoked="HamburgerMenuControl_OnItemInvoked"
+            ItemTemplate="{StaticResource MenuItemTemplate}"
+            ItemsSource="{Binding Menu}"
+            OptionsItemTemplate="{StaticResource MenuItemTemplate}"
+            OptionsItemsSource="{Binding OptionsMenu}" />
+
+        <!--  Overlay LoginPage  -->
+        <!--<views:LoginPage x:Name="LoginPageControl" Visibility="Visible" />-->
+    </Grid>
+
 
 </controls:MetroWindow>
- 
